# openfst

openfst/src/: CMakeLists.txt
openfst/src/include/fst/: minimize.h  partition.h
openfst/src/lib/: CMakeLists.txt
